KAAV-1567 fix side modal close button visibility when scrolling down

--- a/src/components/projectEdit/ProjectEdit.scss
+++ b/src/components/projectEdit/ProjectEdit.scss
@@ -813,7 +813,7 @@
       .tab-header {
         position: sticky;
         top: 56px;
-        z-index: 100;
+        z-index: 99;
         width: 510px;
         background-color: #fff;
         margin-left: -33px;
